Add config.js to all pages for authentication

--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -275,6 +275,10 @@
             }
         }
     </style>
+    <!-- Configuration -->
+    <script src="../config/config.js"></script>
+    
+    <!-- Auth0 SDK -->
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 </head>
 <body>
