--- a/pages/terms-of-service.html
+++ b/pages/terms-of-service.html
@@ -283,6 +283,10 @@
         <span class="feedback-button-text">Feedback</span>
     </button>
 
+    <!-- Configuration -->
+    <script src="../config/config.js"></script>
+    
+    <!-- Auth0 SDK -->
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="../js/shared-header.js"></script>
     <script src="../js/feedback-modal.js"></script>
