Fix script loading order for authentication

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -510,8 +510,11 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
+    <!-- Configuration MUST load first -->
     <script src="../config/config.js"></script>
+    
+    <!-- Auth0 SDK -->
+    <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="../js/auth.js"></script>
     <script src="../js/shared-header.js"></script>
     <script>
