--- a/pages/health-tracker.html
+++ b/pages/health-tracker.html
@@ -436,6 +436,10 @@
         <span class="feedback-button-text">Feedback</span>
     </button>
 
+    <!-- Configuration MUST load first -->
+    <script src="../config/config.js"></script>
+    
+    <!-- Auth0 SDK -->
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="../js/shared-header.js"></script>
     <script src="../js/feedback-modal.js"></script>
